--- a/css/main.scss
+++ b/css/main.scss
@@ -50,7 +50,7 @@ ul {
 }
 
 section {
-    padding: 50em 2em;
+    padding: 5em 2em;
 }
 
 .hero {
@@ -85,7 +85,7 @@ section {
 
     .watch-video-cta {
         display: block;
-        margin-top: 2.5em;
+        margin-top: 1em;
 
         img {
             margin-right: .5em;
@@ -275,7 +275,7 @@ nav {
             font: bold;
         }
 
-        li.go-premium-cta-a {
+        li.go-premium-cta {
             color: var(--primary-color);
             border: 3px solid var(--primary-color);
             font-weight: bold;
@@ -379,6 +379,31 @@ nav {
 
         iframe {
             height: 100%;
+        }
+    }
+}
+
+@media only screen and (min-width: 1450px) {
+    .features-section {
+
+        &:before {
+            content: '';
+            position: absolute;
+            width: 10%;
+            height: 20em;
+            background: var(--primary-color);
+            left: 0;
+            top: -4em;
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            width: 200px;
+            height: 20em;
+            background: url('../images/dots.svg') no-repeat;
+            left: 4.5em;
+            top: 2em;
         }
     }
 }
